fixed logo jumping down

--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -17,7 +17,7 @@ input#nav-toggle:checked ~ #nav-menu {
 
 // navbar items
 .navbar {
-  @apply relative flex flex-wrap items-center justify-between;
+  @apply relative flex flex-nowrap items-center justify-between;
 }
 
 .navbar-brand {
